# ccpp

./: .gitignore  README.md
bank-account/: CMakeLists.txt  main.c  main.h
c-linked-list/: CMakeLists.txt  linkedlist.c  linkedlist.h  main.c
camping/: CMakeLists.txt  camping_group.c  camping_group.h  camping_main.c  camping_main.h  compile  date.c  date.h  main_menu.c  main_menu.h  pricing_policy.c  pricing_policy.h  structs.h
es2/: es1.c  es2.c  es3.c  es4.c  es5.c  es6.c  es7.c  numbersIndexes.txt
esercitazioniC/: es1.c  es1.cpp  es2.c  es2.cpp  es3.cpp  es4.cpp  es5.cpp  es6.cpp  es7.c  es7.cpp  es8.cpp  es9.cpp  ggpp
prova/: CMakeLists.txt  FileManager.cpp  FileManager.h  Person.cpp  Person.h  main.cpp
struct-malloc/: CMakeLists.txt  main.c
